Page load flicker issue

--- a/static/css/_base.scss
+++ b/static/css/_base.scss
@@ -119,3 +119,7 @@ md-progress-circular .md-inner .md-left .md-half-circle, md-progress-circular .m
 md-progress-circular .md-inner .md-left .md-half-circle {
   border-left-color: #2196f3
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
